Chgmt nom fichier

--- a/exemple/index.html
+++ b/exemple/index.html
@@ -48,7 +48,7 @@
         integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
         crossorigin="anonymous"></script>
     <script type="text/javascript" src="/scripts/lib/ejs.min.js"></script>
-    <script type="text/javascript" src="/scripts/modal.js"></script>
+    <script type="text/javascript" src="/scripts/modal.min.js"></script>
 
 </head>
 <body>
