--- a/exemple/index.html
+++ b/exemple/index.html
@@ -10,7 +10,7 @@
 
     <!-- CSS necessaires pour fonctionnement fenêtres modales -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" media="screen" href="/styles/modal.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/styles/modal.min.css" />
     
     <!-- CSS propre à cette page -->
     <style>
